# OpenGL_Workbench_Instancing

./: CMakeLists.txt  CMakePresets.json  Main.cpp  Readme.md  Window.cpp  Window.hpp
cmake/: SetCompilerFlags.cmake
include/: Camera.hpp  FrameRateCounter.hpp  Graph.hpp  MathEffect.hpp  MathEffectSelector.hpp
include/Core/: Camera.hpp  FrameRateCounter.hpp  PostProcess.hpp  Shader.hpp  Texture2D.hpp  Vertex.hpp  VertexArray.hpp
include/Core/Buffers/: FrameBuffer.hpp  RenderBuffer.hpp  VertexBuffer.hpp
include/Graphics/: PostProcess.hpp
include/Math/: Graph.hpp  MathEffectSelector.hpp
resources/shaders/: fragment.glsl  vertex.glsl
resources/shaders/postprocess/: fragment.glsl  vertex.glsl
src/: Camera.cpp  FrameRateCounter.cpp  Graph.cpp  MathEffect.cpp  MathEffectSelector.cpp  Shader.cpp
src/Core/: CMakeLists.txt  Camera.cpp  FrameRateCounter.cpp  PostProcess.cpp  Shader.cpp  Texture2D.cpp  VertexArray.cpp
src/Core/Buffers/: FrameBuffer.cpp  RenderBuffer.cpp  VertexBuffer.cpp
src/Graphics/: CMakeLists.txt  PostProcess.cpp
src/Math/: CMakeLists.txt  Graph.cpp  MathEffect.cpp  MathEffectSelector.cpp
